Produce an OSGi bundle

--- a/src/site/xdoc/index.xml.vm
+++ b/src/site/xdoc/index.xml.vm
@@ -21,6 +21,7 @@
         <li>Conversion between signed normalized fixed-point numbers and floating point numbers.</li>
         <li>Machine-generated specializations of methods to reduce conversions down to a single multiply or divide in most cases.</li>
         <li>100% unit test coverage.</li>
+        <li><a href="https://www.osgi.org/">OSGi</a>-ready.</li>
         <li>ISC license.</li>
       </ul>
     </subsection>
